--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,6 @@
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
-    "module": "es2015",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -16,7 +15,8 @@
     ],
     "lib": [
       "es2018",
-      "dom"
+      "dom",
+      "es2015.collection",
     ]
-  }
+  },
 }
